@@ -412,6 +412,11 @@
       The default for \code{Sweave()} is to produce only PDF figures
       (rather than both EPS and PDF).
 
+      There are improvements in the way \code{Sweave()} and
+      \code{Stangle()} handle non-ASCII vignette sources, especially in
+      a UTF-8 locale: see \sQuote{Writing R Extensions} which now has a
+      subsection on this topic.
+
       \item \code{factanal()} now returns the rotation matrix if a
       rotation such as \code{"promax"} is used, and hence factor
       correlations are displayed.  (Wish of \PR{12754}.)
